k8s/terraform-gke-openvpn-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: terraform-gke-openvpn
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "terraform-gcp-openvpn-ingress"
spec:
  backend:
    serviceName: terraform-gke-openvpn
    servicePort: 1194
